<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/log_in"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facebookFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/fbImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/user_icon"
            tools:srcCompat="@drawable/user_icon"
            app:roundPercent="1"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/fbLogo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="@+id/fbImage"
            app:layout_constraintEnd_toEndOf="@+id/fbImage"
            app:srcCompat="@drawable/facebook_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/fbName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:text="@string/not_logged_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/fbImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fbImage"
            app:layout_constraintTop_toTopOf="@+id/fbImage" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/fbPageImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/page_icon"
            tools:srcCompat="@drawable/page_icon"
            app:roundPercent="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/fbImage"
            app:layout_constraintStart_toStartOf="@+id/fbImage"
            app:layout_constraintTop_toBottomOf="@+id/fbImage"/>

        <TextView
            android:id="@+id/fbPageName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_page_connected"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/fbPageImage"
            app:layout_constraintEnd_toEndOf="@+id/fbName"
            app:layout_constraintStart_toStartOf="@+id/fbName"
            app:layout_constraintTop_toTopOf="@+id/fbPageImage" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/instaImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/fbImage"
            app:layout_constraintTop_toBottomOf="@+id/fbPageImage"
            app:roundPercent="1"
            app:srcCompat="@drawable/user_icon"
            tools:srcCompat="@drawable/user_icon" />

        <ImageView
            android:id="@+id/instaLogo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="@+id/instaImage"
            app:layout_constraintEnd_toEndOf="@+id/instaImage"
            app:srcCompat="@drawable/instagram_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/instaName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/not_logged_in"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/instaImage"
            app:layout_constraintTop_toTopOf="@+id/instaImage" />

        <TextView
            android:id="@+id/instaUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/instaName"
            app:layout_constraintTop_toBottomOf="@+id/instaName" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instaUsername"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/twitterFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookFrame">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/twImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundPercent="1"
            app:srcCompat="@drawable/user_icon"
            tools:srcCompat="@drawable/user_icon" />

        <ImageView
            android:id="@+id/twitterLogo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="@+id/twImage"
            app:layout_constraintEnd_toEndOf="@+id/twImage"
            app:srcCompat="@drawable/twitter_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/twName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/not_logged_in"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/twImage"
            app:layout_constraintTop_toTopOf="@+id/twImage" />

        <TextView
            android:id="@+id/twScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/twName"
            app:layout_constraintTop_toBottomOf="@+id/twName" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twScreenName" />

        <Button
            android:id="@+id/twLogOutButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/tw__blue_default"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/log_out"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:typeface="normal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twScreenName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableRight="@drawable/arrow_right"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterFrame"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>